# pyflink-managed-aws

./: .gitignore  README.md  application_properties.json  iot_processor.py  iot_producer.py  multi_sink.py  pom.xml  pyproject.toml  stock.py  table_api_demo.py
assembly/: assembly.xml
kinesis_sink/: application_properties.json  kinesis_sink.py  pom.xml
kinesis_sink/assembly/: assembly.xml
multi_sink/: multi_sink.py
s3_sink/: application_properties.json  pom.xml  s3_sink.py
s3_sink/assembly/: assembly.xml
