[tool.poetry]
name = "aws-flink-managed"
version = "0.2.0"
description = "AWS pyFlink getting started"
authors = ["Augusto de Nevrezé <adenevreze@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
apache-flink = "1.19.1"
boto3 = "^1.34.143"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
